# market-pattern-leader

./: .coderabbit.yaml  .gitignore  CLAUDE.md  INSTALLATION.md  PatternLeader_Design_Document.md  README.md
.cursor/rules/: auto-run-rules.mdc
backend/: INSTALL.md  README.md  __init__.py  main.py  pyproject.toml  requirements-minimal.txt  requirements-simple.txt  requirements.txt  run_server.py
backend/scripts/: FORMAT_README.md  format.bat  format.py  format.sh
backend/src/: .env  .env.example  container.py  main.py
backend/src/api/v1/: dependencies.py
backend/src/api/v1/activities/: constant.py  container.py  endpoint.py  entity.py
backend/src/api/v1/activities/formatters/: __init__.py  response_formatter.py
backend/src/api/v1/activities/services/: __init__.py  activity_service.py  place_service.py  recommendation_orchestrator.py  recommendation_service.py  response_formatter.py  weather_match_service.py  weather_service.py
backend/src/api/v1/endpoints/: __init__.py  analysis.py  market.py
backend/src/common/: config.py  log.py
backend/src/core/: __init__.py  config.py  logging.py
backend/src/infrastructure/nosql/: redis_client.py
backend/src/infrastructure/schema/: feed_schema.py  friend_schema.py  user_schema.py
backend/src/models/: __init__.py  analysis_result.py  market_data.py
backend/src/services/: __init__.py  analysis_engine.py  data_collector.py  psychology_analyzer.py
backend/src/templates/auth/: login.html  login_user.html
backend/src/utils/: cache_manager.py
backend/tests/: test_psychology_analyzer.py
frontend/: INSTALL.md  README.md  app.py  requirements-minimal.txt  requirements-safe.txt  requirements-simple.txt  requirements.txt
(+11 files in other folders)
