[build-system]
build-backend = "poetry.core.masonry.api"
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "I", "UP"]
ignore = ["E402", "E501", "F403", "F405"]
# Same as Black.
line-length = 120
per-file-ignores = {}
requires = ["poetry-core"]
# ref: https://beta.ruff.rs/docs/rules/
select = ["B", "C4", "E", "F", "I", "N", "UP", "W"]
# Assume Python 3.11.
target-version = "py312"
unfixable = []

[tool.poetry]
authors = ["jhcho <jo4186@naver.com>"]
description = ""
name = "weathervibe"
version = "0.1.0"

[tool.poetry.dependencies]
aiohttp = "^3.10.0"
asyncio-redis = "^0.16.0"
asyncpg = "^0.30.0"
black = "^24.10.0"
dependency-injector = "^4.43.0"
fastapi = {extras = ["standard"], version = "^0.115.5"}
flake8 = "^7.1.1"
isort = "^5.13.2"
jinja2 = "^3.1.5"
pika = "^1.3.2"
pre-commit = "^4.0.1"
psycopg2 = "^2.9.10"
pydantic-settings = "^2.6.1"
python = "^3.11"
redis = "^5.2.0"
requests = "^2.32.3"
ruff = "^0.7.3"
sqlalchemy = "^2.0.36"
toml-sort = "^0.23.1"

[tool.poetry.group.test.dependencies]
httpx = "^0.27.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.12.0"

[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
minversion = "6.0"
pythonpath = ["src"]
testpaths = ["src/tests"]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
